--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 </head>
 <body>
 	<br>
-	<h1>10 minute coding challenge </h1> 
-	<!-- <br> -->
-	<h1>plus minus</h1>
-	<br>
-	<br>
+	<h1>10 minute coding challenge: staircase</h1> 
 	<h2>with stephen weiss</h2>
 	<br>
 	<br>
 	<br>
-	<p>source: <a href="https://www.hackerrank.com/challenges/plus-minus/problem">https://www.hackerrank.com/challenges/plus-minus/problem</a></p>
+	<br>
+	<br>
+	<br>
+	<p>source: <a href="https://www.hackerrank.com/challenges/staircase/problem">https://www.hackerrank.com/challenges/staircase/problem</a></p>
+	<br>
+
 	<br>
 	<br>
 	<br>
@@ -25,11 +26,6 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/ALtxh5IXBWA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">enrico mantegazza</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/eRenj9sJmLc">pawel czerwinski</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
