--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coding Challenge Plus Minus</title>
+	<title>Coding Challenge</title>
 	<link rel="stylesheet" type="text/css" href="style.css" >
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
 	<br>
-	<h1>10 minute coding challenge: staircase</h1> 
+	<h1>10 minute coding challenge: mini max sum</h1> 
 	<h2>with stephen weiss</h2>
 	<br>
 	<br>
@@ -15,17 +15,13 @@
 	<br>
 	<br>
 	<br>
-	<p>source: <a href="https://www.hackerrank.com/challenges/staircase/problem">https://www.hackerrank.com/challenges/staircase/problem</a></p>
-	<br>
-
+	<p>source: <a href="https://www.hackerrank.com/challenges/mini-max-sum/problem">https://www.hackerrank.com/challenges/mini-max-sum/problem</a></p>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/eRenj9sJmLc">pawel czerwinski</a> on <a href="https://unsplash.com">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/YMCP5CCALig">andrea reiman</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
