--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 	<br>
-	<h1>10 minute coding challenge:</h1>
-	<h1> time conversion</h1> 
+	<h1>15 minute coding challenge:</h1>
+	<h1>apples and oranges</h1> 
 	<h2>with stephen weiss</h2>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p>source: <a href="https://www.hackerrank.com/challenges/time-conversion/problem">https://www.hackerrank.com/challenges/time-conversion/problem</a></p>
+	<p>source: https://www.hackerrank.com/challenges/apple-and-orange/problem</p>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/vd5C8aL8Fvk">holger link</a> on <a href="https://unsplash.com">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/8rEJiVQk1Vw">denise bossarte</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
