--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 	<br>
-	<h1>15 minute coding challenge:</h1>
-	<h1>apples and oranges</h1> 
+	<h1>coding challenge:</h1>
+	<h1>kangaroos</h1> 
 	<h2>with stephen weiss</h2>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p>source: https://www.hackerrank.com/challenges/apple-and-orange/problem</p>
+	<p>source: https://www.hackerrank.com/challenges/kangaroo/problem</p>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/8rEJiVQk1Vw">denise bossarte</a> on <a href="https://unsplash.com">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/KZa4fREZoKk">joel felipe</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
