--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
 	<br>
 	<h1>coding challenge:</h1>
-	<h1>kangaroos</h1> 
+	<h1>best records</h1> 
 	<h2>with stephen weiss</h2>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p>source: https://www.hackerrank.com/challenges/kangaroo/problem</p>
+	<p>source: https://www.hackerrank.com/challenges/breaking-best-and-worst-records/problem</p>
 	<br>
 	<br>
 	<br>
 	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/KZa4fREZoKk">joel felipe</a> on <a href="https://unsplash.com">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/H5PnIYI_1I0">camille couvez</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
