--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<br>
 	<h1>coding challenge:</h1>
-	<h1>ip validation</h1> 
+	<h1>ip validation, pt 3</h1> 
 	<h2>with stephen weiss</h2>
-	<br>
+	<h2>august 4, 2018</h2>
 	<br>
 	<br>
 	<br>
@@ -19,7 +19,6 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/ZK1WQDMQvik">janita sumeiko</a> on <a href="https://unsplash.com">unsplash</a>
+	<p> image credit: <a href="https://unsplash.com/photos/KzPefInJW58">joshua coleman</a> on <a href="https://unsplash.com">unsplash</a>
 </body>
 </html>
