container-ized each day's challenges
Each challenge will now get it's own article which will allow a continuous page, rather than a totally static page for every challenge. also, added a button for the link to the challenge

--- a/index.html
+++ b/index.html
@@ -2,23 +2,33 @@
 <html>
 <head>
 	<title>Coding Challenge</title>
-	<link rel="stylesheet" type="text/css" href="style.css" >
+	<!-- CSS from Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- End of CSS from Bootstrap -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:900">
+	<link rel="stylesheet" type="text/css" href="style.css" >
 </head>
 <body>
-	<br>
-	<h1>coding challenge:</h1>
-	<h1>ip validation, pt 3</h1> 
-	<h2>with stephen weiss</h2>
-	<h2>august 4, 2018</h2>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>source: https://www.codewars.com/kata/ip-validation/train/javascript</p>
-	<br>
-	<br>
-	<br>
-	<p> image credit: <a href="https://unsplash.com/photos/KzPefInJW58">joshua coleman</a> on <a href="https://unsplash.com">unsplash</a>
+	<article class="formatting-names-problem">
+		<div class="header-space"></div>
+		<div class="jumbocustom screen-text"> 
+			<h1>coding challenge:</h1>
+			<h2>formatting names from objects</h2>
+			<p>with stephen weiss</p>
+			<p>august 5, 2018</p>
+		</div>
+		<div class="container screen-text justify-content-start row no-gutters">
+			<div class="col-12 no-gutters">
+				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/format-a-string-of-names-like-bart-lisa-and-maggie/javascript" role="button">Code on!</a></p>
+			</div>
+			<div class="col-12">
+				<p>Artwork credit
+				<a class="btn btn-secondary" href="https://unsplash.com/photos/vu7on-6-HLM" role="button">View image</a>
+				<a class="btn btn-secondary" href="https://unsplash.com/@mcmre" role="button">View artist</a>
+				</p>
+			</div>
+		</div>
+	</article>	
 </body>
 </html>
