--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 	<article class="formatting-names-problem">
 		<div class="header-space"></div>
-		<div class="jumbocustom red-screen-text"> 
+		<div class="jumbocustom red-text screen-text"> 
 			<h1>coding challenge:</h1>
 			<h2>formatting names from objects</h2>
 			<p>with stephen weiss</p>
 			<p>august 5, 2018</p>
 		</div>
-		<div class="container red-screen-text justify-content-start row no-gutters">
+		<div class="container red-text screen-text justify-content-start row no-gutters">
 			<div class="col-12 no-gutters">
 				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/format-a-string-of-names-like-bart-lisa-and-maggie/javascript" role="button">Code on!</a></p>
 			</div>
@@ -32,13 +32,13 @@
 	</article>	
 	<article class="reverse-or-rotate-problem">
 		<div class="header-space"></div>
-		<div class="jumbocustom white-text"> 
+		<div class="jumbocustom white-text screen-text"> 
 			<h1>coding challenge:</h1>
 			<h2>reverse or rotate</h2>
 			<p>with stephen weiss</p>
 			<p>august 6, 2018</p>
 		</div>
-		<div class="container white-text justify-content-start align-content-center row no-gutters">
+		<div class="container white-text screen-text justify-content-start align-content-center row no-gutters">
 			<div class="col-12 no-gutters">
 				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/reverse-or-rotate/javascript" role="button">Code on!</a></p>
 			</div>
@@ -50,5 +50,25 @@
 			</div>
 		</div>
 	</article>	
+	<article class="anagrams-problem">
+		<div class="header-space"></div>
+		<div class="jumbocustom white-text screen-text"> 
+			<h1>coding challenge:</h1>
+			<h2>anagrams</h2>
+			<p>with stephen weiss</p>
+			<p>august 7, 2018</p>
+		</div>
+		<div class="container anagram-text  justify-content-start row no-gutters">
+			<div class="col-12 no-gutters">
+				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/format-a-string-of-names-like-bart-lisa-and-maggie/javascript" role="button">Code on!</a></p>
+			</div>
+			<div class="col-12">
+				<p>Artwork credit
+				<a class="btn btn-secondary" href="https://unsplash.com/photos/vu7on-6-HLM" role="button">View image</a>
+				<a class="btn btn-secondary" href="https://unsplash.com/@mcmre" role="button">View artist</a>
+				</p>
+			</div>
+		</div>
+	</article>
 </body>
 </html>
