--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			</div>
 		</div>
 	</article>	
+
 	<article class="reverse-or-rotate-problem">
 		<div class="header-space"></div>
 		<div class="jumbocustom white-text screen-text"> 
@@ -50,6 +51,7 @@
 			</div>
 		</div>
 	</article>	
+
 	<article class="anagrams-problem">
 		<div class="header-space"></div>
 		<div class="jumbocustom white-text screen-text"> 
@@ -58,7 +60,7 @@
 			<p>with stephen weiss</p>
 			<p>august 7, 2018</p>
 		</div>
-		<div class="container anagram-text  justify-content-start row no-gutters">
+		<div class="container justify-content-start row no-gutters">
 			<div class="col-12 no-gutters">
 				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/format-a-string-of-names-like-bart-lisa-and-maggie/javascript" role="button">Code on!</a></p>
 			</div>
@@ -70,5 +72,27 @@
 			</div>
 		</div>
 	</article>
+
+	<article class="tortoise-race-problem">
+		<div class="header-space"></div>
+		<div class="jumbocustom tortoise-header-text"> 
+			<h1>coding challenge:</h1>
+			<h2>tortoise race</h2>
+			<p>with stephen weiss</p>
+			<p>august 8, 2018</p>
+		</div>
+		<div class="container justify-content-start row no-gutters">
+			<div class="col-12 no-gutters">
+				<p>Visit Codewars to try it for yourself <a class="btn btn-md btn-secondary" href="https://www.codewars.com/kata/tortoise-racing/train/javascript" role="button">Code on!</a></p>
+			</div>
+			<div class="col-12">
+				<p>Artwork credit
+				<a class="btn btn-secondary" href="https://unsplash.com/photos/ZqLeQDjY6fY" role="button">View image</a>
+				<a class="btn btn-secondary" href="https://unsplash.com/@its_tgain" role="button">View artist</a>
+				</p>
+			</div>
+		</div>
+	</article>
+
 </body>
 </html>
